# tg-bot-detector

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: best-practices.md  scoring-methodology.md
docs/plans/: 2026-02-28-auto-clustering-design.md  2026-02-28-auto-clustering-plan.md  2026-02-28-review-fixes.md
docs/superpowers/plans/: 2026-03-11-ml-detection-plan.md
docs/superpowers/specs/: 2026-03-11-ml-detection-design.md
examples/: config.example.toml
registry/: README.md  known_bots.example.json
scripts/: active_review.py  analyze_profile_photos.py  extract_features_from_labels.py  fetch_uncertain_profiles.py  full_enum.py  ml_rescore_candidates.py  monitor_leaves.py  predict_unlabeled.py  purge_batch.py  purge_bot_api.py  review_labels.py  train_ground_truth.py  unban_batch.py  validate_new_features.py
tests/: conftest.py  test_cli.py  test_clustering.py  test_collectors.py  test_config.py  test_cross_channel.py  test_enumeration.py  test_features.py  test_ground_truth.py  test_labeling.py  test_ml.py  test_registry.py  test_scoring.py  test_statistics.py
tg_purge/: __init__.py  __main__.py  cli.py  client.py  clustering.py  config.py  cross_channel.py  enumeration.py  features.py  formatters.py  labeling.py  ml.py  photo_analysis.py  scoring.py  statistics.py  utils.py
tg_purge/collectors/: __init__.py  admin_log.py  api.py  base.py  message_authors.py
tg_purge/commands/: analyze.py  candidates.py  join_dates.py  label.py  ml_cmd.py  registry.py  spike.py  validate.py
