[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-bot-detector"
version = "0.1.0"
description = "Heuristic bot detection toolkit for Telegram broadcast channel subscribers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "telethon>=1.28",
]

[project.optional-dependencies]
toml = ["tomli>=1.0; python_version < '3.11'"]
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

[project.scripts]
tg-purge = "tg_purge.cli:main"

[tool.setuptools.packages.find]
include = ["tg_purge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
